fix clients on mobile

--- a/junior/intro-section-with-dropdown-navigation/input.css
+++ b/junior/intro-section-with-dropdown-navigation/input.css
@@ -87,5 +87,5 @@ body {
 }
 
 .clients img{
-    @apply block max-w-full min-h-full;
+    @apply block px-2 w-1/4 max-h-full;
 }
