--- a/junior/intro-section-with-dropdown-navigation/output.css
+++ b/junior/intro-section-with-dropdown-navigation/output.css
@@ -588,14 +588,14 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .mb-10 {
@@ -743,14 +743,14 @@ video {
   background-color: hsl(0 0% 8% / var(--tw-bg-opacity));
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-3 {
@@ -955,8 +955,10 @@ body {
 
 .clients img {
   display: block;
-  min-height: 100%;
-  max-width: 100%;
+  max-height: 100%;
+  width: 25%;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .hover\:border-black:hover {
@@ -981,11 +983,6 @@ body {
   .lg\:mx-auto {
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .lg\:mx-5 {
-    margin-left: 1.25rem;
-    margin-right: 1.25rem;
   }
 
   .lg\:ml-10 {
